// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-svg Prop Custom Svg 1`] = `
<svg
  aria-hidden="true"
  class="m-svg"
  height="5em"
  width="5em"
/>
`;

exports[`Storyshots modul-components|m-svg Prop Height 1`] = `
<svg
  aria-hidden="true"
  class="m-svg"
  height="120px"
  width="120px"
/>
`;

exports[`Storyshots modul-components|m-svg Prop Svg Title 1`] = `
<svg
  class="m-svg"
  height="3em"
  width="3em"
>
  <title>
    Inspect the HTML to see title tag inside the SVG.
  </title>
</svg>
`;

exports[`Storyshots modul-components|m-svg Prop Width 1`] = `
<svg
  aria-hidden="true"
  class="m-svg"
  height="50px"
  width="50px"
/>
`;

exports[`Storyshots modul-components|m-svg sandbox 1`] = `
<svg
  class="m-svg"
  height="3em"
  style="color: rgb(0, 0, 0);"
  width="3em"
>
  <title>
    Inspect the HTML to see title tag inside the SVG.
  </title>
</svg>
`;
